--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Pelado Nerd</title>
+  <title>Diego Fernandez Lecler</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -101,17 +101,17 @@
 
 
         <!-- Your Name -->
-        <h1>Pelado Nerd</h1>
+        <h1>Diego Fernandez Lecler</h1>
 
         <!-- Short Bio -->
-        <p>Hola. Esta es una lista de mis redes sociales para que puedas encontrarlas de forma fácil. De nada. Ah, no dijiste gracias? Bueno, no me sorprende.</p>
+        <p>Hola. Esta es una lista de mis redes sociales para que puedas contactarme de forma fácil. Muchas gracias.</p>
         
         <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->  
         <div>
-        <a class="small button-twitter" href="https://twitter.com/pablokbs"><img class="icon" src="icons/twitter.svg"></a> 
-        <a class="small button-instagram" href="https://instagram.com/pablokbs"><img class="icon" src="icons/instagram.svg"></a>
-        <a class="small button-youtube" href="https://youtube.com/peladonerd"><img class="icon" src="icons/youtube.svg"></a>
-        <a class="small button-github" href="https://github.com/pablokbs"><img class="icon" src="icons/github.svg"></a> <br>
+        <a class="small button-twitter" href="https://twitter.com/diego_lecler"><img class="icon" src="icons/twitter.svg"></a> 
+        <a class="small button-instagram" href="https://instagram.com/diegofernandezlecler"><img class="icon" src="icons/instagram.svg"></a>
+        <a class="small button-facebook" href="https://www.facebook.com/diegofernandezlecler/"><img class="icon" src="icons/facebook.svg"></a>
+        <a class="small button-github" href="https://github.com/dfernandezlecler"><img class="icon" src="icons/github.svg"></a> <br>
 
         </div>
         <br>
@@ -120,15 +120,13 @@
         <a class="button button-kit" href="https://kit.co/pablokbs"><img class="icon" src="icons/kit.svg">Mi hardware</a> <br>
         <a class="button button-youtube" href="https://youtube.com/pablokbs"><img class="icon" src="icons/youtube.svg">Mi canal de vlogs</a> <br>
         <a class="button button-mixer" href="https://speakerdeck.com/pablokbs"><img class="icon" src="icons/slides.svg">Slides</a> <br>     
-        <a class="button button-snapchat" href="https://merch.peladonerd.com/"><img class="icon" src="icons/tshirt.svg">Merchandising</a> <br>
-        <a class="button button-reddit" href="https://reddit.com/r/peladonerd"><img class="icon" src="icons/reddit.svg">Reddit</a>
-        <a class="button button-medium" href="mailto:pablo@peladonerd.com"><img class="icon" src="icons/mail.svg">Enviame un mail</a> <br>
+        <a class="button button-medium" href="mailto:dfernandezlecler@gmail.com"><img class="icon" src="icons/mail.svg">Enviame un mail</a> <br>
         <a class="button acuity-embed-button-local" href="https://app.acuityscheduling.com/schedule.php?owner=21209490&appointmentType=18289396" target="_blank"><img class="icon" src="icons/calendar.svg">Consultorías</a><br><link rel="stylesheet" href="https://embed.acuityscheduling.com/embed/button/21209490.css" id="acuity-button-styles"/><script src="https://embed.acuityscheduling.com/embed/button/21209490.js" async></script>
         <a class="button button-soundcloud" href="https://ko-fi.com/peladonerd"><img class="icon" src="icons/coffee.svg">Comprame un cafecito</a> <br>
         <a class="button button-snapchat" href="sponsors.html"><img class="icon" src="icons/dollar.svg">Sponsorea mis videos</a> <br>
           <br>
         <footer>
-          <p>Código para esta página <a href="https://github.com/pablokbs/peladonerd-web">acá</a>.</p>
+          <p>© 2021 - DIEGO FERNANDEZ LECLER. Todos los derechos reservados.</p>
         </footer>
           
       </div>
@@ -136,13 +134,13 @@
   </div>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GR82G97BBQ"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-GR82G97BBQ');
+  gtag('config', 'G-');
 </script>
 
 <!-- End Document
