--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <a class="button button-medium" href="mailto:dfernandezlecler@gmail.com"><img class="icon" src="icons/mail.svg">Enviame un mail</a> <br>
         <a class="button acuity-embed-button-local" href="https://app.acuityscheduling.com/schedule.php?owner=21209490&appointmentType=18289396" target="_blank"><img class="icon" src="icons/calendar.svg">Consultorías</a><br><link rel="stylesheet" href="https://embed.acuityscheduling.com/embed/button/21209490.css" id="acuity-button-styles"/><script src="https://embed.acuityscheduling.com/embed/button/21209490.js" async></script>
         <a class="button button-soundcloud" href="https://ko-fi.com/peladonerd"><img class="icon" src="icons/coffee.svg">Comprame un cafecito</a> <br>
-        <a class="button button-snapchat" href="sponsors.html"><img class="icon" src="icons/dollar.svg">Sponsorea mis videos</a> <br>
+        <a class="button button-snapchat" href="sponsors.html"><img class="icon" src="icons/dollar.svg">Sponsorea mis videosss</a> <br>
           <br>
         <footer>
           <p>© 2021 - DIEGO FERNANDEZ LECLER. Todos los derechos reservados.</p>
