--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 
         <!-- Your Name -->
-        <h1>Diego Fernandez Lecler</h1>
+        <h1>Diego Fernández Lecler</h1>
 
         <!-- Short Bio -->
         <p>Hola. Esta es una lista de mis redes sociales para que puedas contactarme de forma fácil. Muchas gracias.</p>
